prevent XSS with escape() method around tweet text, add animation for warning when charLimit exceeded as well as null input. Fix issue with animation and errors that persist.

--- a/public/styles/display-tweets.css
+++ b/public/styles/display-tweets.css
@@ -79,4 +79,14 @@ article footer {
 .flag-retweet-like .icon:hover {
   color: #c2983b;
 }
-/* sd */
+
+.error-section{
+  margin-top: 1em;
+  display:none;
+}
+
+#specific-message {
+  display:inline;
+  color:red;
+
+}
